; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_gitdiff_newmode.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_gitdiff_newmode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gitdiff_data = type { i32 }
%struct.patch = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gitdiff_data*, i8*, %struct.patch*)* @gitdiff_newmode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gitdiff_newmode(%struct.gitdiff_data* %0, i8* %1, %struct.patch* %2) #0 {
  %4 = alloca %struct.gitdiff_data*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.patch*, align 8
  store %struct.gitdiff_data* %0, %struct.gitdiff_data** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.patch* %2, %struct.patch** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = load %struct.gitdiff_data*, %struct.gitdiff_data** %4, align 8
  %9 = getelementptr inbounds %struct.gitdiff_data, %struct.gitdiff_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.patch*, %struct.patch** %6, align 8
  %12 = getelementptr inbounds %struct.patch, %struct.patch* %11, i32 0, i32 0
  %13 = call i32 @parse_mode_line(i8* %7, i32 %10, i32* %12)
  ret i32 %13
}

declare dso_local i32 @parse_mode_line(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
